<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Resilience</string>
  <string name="project_url">https://github.com/DiUS/resilience-android</string>

  <!-- Multi-use -->
  <string name="save">Save</string>
  <string name="send_feedback">Send Feedback</string>
  <string name="feedback">Feedback</string>
  <string name="invalid">Invalid</string>

  <!-- Action bar menu -->
  <string name="all_incidents">All incidents</string>
  <string name="tracked_incidents">Tracked incidents</string>
  <string name="create">Create</string>
  <string name="menu_settings">Settings</string>
  <string name="refresh">Refresh</string>
  <string name="resolve_incident">RESOLVE</string>

  <!-- NEW create incident -->
  <string name="incident_type">Nature of the incident</string>
  <string name="uploading">Uploading&#8230;</string>
  <string name="submit">Submit</string>
  <string name="description_hint">Add a description&#8230;</string>
  <string name="incident_filename_prefix">IncidentAt_</string>
  <string name="uploading_photo">Compressing and uploading photo&#8230;</string>
  <string name="uploading_issue">Creating issue&#8230;</string>
  <string name="upload_complete">Complete.</string>
  <string name="upload_failed">Upload failed. Please try again in a few minutes.</string>
  <string name="reporting">Reporting %s</string>

  <!-- View/create incident -->
  <string name="extra_notes">Extra Notes</string>
  <string name="name">Name</string>
  <string name="select_category">Category</string>
  <string name="select_subcategory">Subcategory</string>
  <string name="impact">Impact Scale</string>
  <string name="camera">Camera</string>
  <string name="photo">Photo</string>
  <string name="map">Map</string>
  <string name="view_incident">View Incident</string>
  <string name="no_image">NO IMAGE</string>
  <string name="dismiss">Dismiss</string>
  
  <string name="email_btn_txt">Email</string>
  <string name="tweet_btn_txt">Tweet</string>

  <!-- List view -->
  <string name="list_view_more_details_desc">More details</string>
  <string name="list_view_category_desc">Incident category</string>
  <string name="list_view_loading_more">Searching for incidents&#8230;</string>
  <string name="now">JUST NOW</string>

  <!-- List view selector toggle buttons -->
  <string name="label_tab_map_view">Map</string>
  <string name="label_tab_list_view">List</string>

  <!-- Locating fragment -->
  <string name="locating_text">Finding your location&#8230;</string>
  <string name="located">Located</string>
  <string name="locate_failed">Sorry, I couldn\'t find you!</string>

</resources>
