<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item android:id="@+id/refresh"
          android:icon="@drawable/ic_menu_refresh"
          android:title="@string/refresh"
          android:showAsAction="ifRoom" android:enabled="true" android:visible="true"/>

  <item android:id="@+id/user_preferences"
          android:icon="@drawable/ic_menu_preferences"
          android:title="@string/user_preferences"
          android:showAsAction="ifRoom" android:enabled="true" android:visible="true"/>

  <item android:id="@+id/send_feedback"
        android:icon="@drawable/feedback"
        android:title="@string/feedback"
        android:showAsAction="ifRoom" android:enabled="true" android:visible="true"/>

  <item android:id="@+id/create_incident"
        android:icon="@drawable/create_incident"
        android:title="@string/create"
        android:showAsAction="always" android:enabled="true" android:visible="true"/>

</menu>
