<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" >

    <TextView
            android:id="@+id/category_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/select_category"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:prompt="@string/select_category" />

    <TextView
            android:id="@+id/sub_category_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/select_subcategory"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
            android:id="@+id/sub_category_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:prompt="@string/select_subcategory" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/impact_scale_lbl"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/impact"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
                android:id="@+id/impact_scale_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="right"
                android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <SeekBar
            android:id="@+id/impact_scale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:max="100" />

    <TextView
            android:id="@+id/notes_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/extra_notes"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="top"
            android:inputType="textMultiLine" >
    </EditText>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

        <Button
                android:id="@+id/submit_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCameraClick"
                android:layout_weight="0.5"
                android:text="@string/camera" />

        <Button
                android:id="@+id/submit_incident"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSubmitClick"
                android:layout_weight="0.5"
                android:text="@string/raise_incident" />

    </LinearLayout>

</LinearLayout>