<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top" >

    <TextView
            android:id="@+id/incident_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center_vertical">
        <requestFocus />
    </TextView>

    <TableLayout
            android:id="@+id/detailed_info_table"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/incident_name" >

        <TableRow
                android:id="@+id/di_tr1"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="0"
                android:padding="5dip" >

            <RelativeLayout
                    android:layout_weight="1"
                    android:layout_width="150dp"
                    android:layout_height="110dp">

                <ImageView
                        android:id="@+id/incident_photo"
                        android:layout_height="fill_parent"
                        android:layout_width="fill_parent"
                        android:contentDescription="@string/photo"
                        android:visibility="invisible"
                        android:paddingLeft="10dp"
                        />

                <TextView
                        android:id="@+id/no_image_label"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_alignBottom="@id/incident_photo"
                        android:layout_alignTop="@id/incident_photo"
                        android:gravity="center"
                        android:visibility="invisible"
                        android:text="@string/no_image"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                <ProgressBar
                        android:id="@+id/image_load_progress_bar"
                        style="?android:attr/progressBarStyleLarge"
                        android:layout_alignBottom="@id/incident_photo"
                        android:layout_alignTop="@id/incident_photo"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" />

            </RelativeLayout>

            <ImageView
                    android:id="@+id/incident_map"
                    android:layout_width="170dp"
                    android:layout_height="110dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/map"
                    android:src="@drawable/map_icon" />
        </TableRow>

        <TableRow>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/extra_notes"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:gravity="center_vertical">
            </TextView>
        </TableRow>

        <TableRow
                android:id="@+id/di_tr2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0" >

            <TextView
                    android:id="@+id/incident_note"
                    android:layout_height="fill_parent"
                    android:layout_width="fill_parent"
                    android:layout_span="2"
                    android:layout_weight="0"
                    android:ems="10"
                    android:gravity="top" />
        </TableRow>
    </TableLayout>

</RelativeLayout>